--- a/.github/workflows/deploy_book.yml
+++ b/.github/workflows/deploy_book.yml
@@ -21,10 +21,14 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
-    - uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: '11'
+    # - uses: actions/setup-java@v2
+    #   with:
+    #     distribution: 'adopt'
+    #     java-version: '11'
+    - name: Install JDK
+      run: |
+        sudo apt-get update; sudo apt-get -y install default-jdk-headless
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
