--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,15 @@ latex:
     targetname: book.tex
 html:
   home_page_in_navbar: true
-  use_repository_button: true
-  use_issues_button: true
-  use_edit_page_button: true
+  use_repository_button: false
+  use_issues_button: false
+  use_edit_page_button: false
   navbar_number_sections: false
-  extra_footer: |
-    <div>
-    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img src="https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png"></a>
-        Alle inhoud op deze site (tenzij anders vermeld) valt onder de <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> licentie.
-    </div>
 
 repository:
   url: https://github.com/misja/OOP1
   path_to_book: ""
-  branch: master
+  branch: main
 
 sphinx:
   config:
