--- a/_toc.yml
+++ b/_toc.yml
@@ -27,3 +27,24 @@ parts:
     sections:
     - file: exercises/8-9_primitive_data
     - file: exercises/9a-9_variables_assignment
+
+- caption: Week 2
+  chapters:
+  - file: course/week_2
+    title: Onderwerpen
+    sections:
+    - file: topics/2a1_methoden
+      title: Methoden
+    - file: topics/2a2_methoden_en_testen
+      title: Methoden en testen
+    - file: topics/2b_condities_en_logica
+      title: Condities en logica
+  - file: exercises/debuggen_en_methoden
+    title: Practicum
+  - file: problems/calculator/index
+    title: Opgave
+  - file: course/ex_2
+    title: Oefening
+    sections:
+    - file: exercises/12_12_if_statements
+      title: Condities
