--- a/_toc.yml
+++ b/_toc.yml
@@ -194,6 +194,13 @@ parts:
 
 - caption: Week 12
   chapters:
+  - file: course/week_12
+    title: Onderwerpen
+    sections:
+    - file: topics/11a_singleton
+      title: Singleton Pattern
+    - file: topics/11b_command
+      title: Command Pattern
   - file: exercises/singleton_pattern
     title: Practicum
   - file: problems/logger/index
