--- a/_toc.yml
+++ b/_toc.yml
@@ -210,6 +210,8 @@ parts:
     sections:
     - file: topics/15a_template
       title: Template Method Pattern
+    - file: topics/15b_adapter_pattern
+      title: Adapter Pattern
   - file: exercises/practicum_adapter_pattern
     title: Practicum
   - file: exercises/adapter_pattern
